Reworking the way indices are handled

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,12 +1,4 @@
 FROM python:3.10.2-buster
 
 RUN python3 -m pip install --upgrade pip \
- && python3 -m pip install fastnumbers==3.2.1 joblib==1.1.0 zstandard==0.17.0
-
-#ADD *.py /sandbox/
-
-#RUN mkdir /sandbox/data/ \
-# && chmod 777 /sandbox -R
-
-#ADD data/small.tsv /sandbox/data/
-#ADD data/small.tsv.gz /sandbox/data/
+ && python3 -m pip install fastnumbers==3.2.1 joblib==1.1.0 zstandard==0.17.0 pynumparser==1.4.1
