--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3.10.2-buster
 
 RUN python3 -m pip install --upgrade pip \
- && python3 -m pip install fastnumbers==3.2.1 joblib==1.1.0 zstandard==0.17.0 pynumparser==1.4.1
+ && python3 -m pip install fastnumbers==3.2.1 joblib==1.1.0 zstandard==0.17.0
+
+#pynumparser==1.4.1
