Stopped using bitarray module for now because it is slower than using native functions

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.10.2-buster
 
 RUN python3 -m pip install --upgrade pip \
- && python3 -m pip install bitarray==2.5.1 fastnumbers==3.2.1 msgpack==1.0.4 joblib==1.1.0 zstandard==0.17.0 
+ && python3 -m pip install fastnumbers==3.2.1 msgpack==1.0.4 joblib==1.1.0 zstandard==0.17.0 
 
+#bitarray==2.5.1 
 #pynumparser==1.4.1
